kubernetes/apps/worn/app/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: worn-ui
  namespace: worn
  labels:
    app.kubernetes.io/name: worn
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: worn
